--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "db:reset": "npm run db:clear && npm run db:migrate && npm run db:seed"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.587.0",
-    "@aws-sdk/lib-storage": "3.587.0",
-    "@aws-sdk/s3-presigned-post": "3.587.0",
+    "@aws-sdk/client-s3": "^3.529.0",
+    "@aws-sdk/lib-storage": "^3.564.0",
+    "@aws-sdk/s3-presigned-post": "^3.529.0",
     "@aws-sdk/s3-request-presigner": "3.587.0",
     "@hookform/resolvers": "3.4.2",
     "@lucia-auth/adapter-drizzle": "1.0.7",
@@ -51,8 +51,9 @@
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
     "drizzle-orm": "^0.30.10",
+    "fast-xml-parser": "^4.4.1",
     "fumadocs-core": "11.3.1",
-    "fumadocs-mdx": "8.2.26",
+    "fumadocs-mdx": "^8.2.26",
     "fumadocs-ui": "11.3.1",
     "lodash": "4.17.21",
     "lucia": "3.2.0",
